Buttons overflow bug fix

--- a/style.css
+++ b/style.css
@@ -687,10 +687,6 @@ body{
         gap: 1rem;
         justify-content: space-between;
     }
-    .icons{
-        padding: 1.5rem;
-        font-size: 1rem;
-    }
     .right-side{
         padding: 0 .5rem;
     }
